--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "@Gitblog("nayonnii")"
+title: "@Gitblog(\"nayonnii\")"
 author: "nayonnii"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: "https://nayonnii.github.io/"
