--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "@Gitblog(\"nayonnii\")"
 author: "nayonnii"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
-permalink: "https://nayonnii.github.io/"
+permalink: "/:title/"
 lang: "en"
 excerpt_separator: "\n\n\n"
 date_format: "%B %d, %Y"
