--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ external:                  # shows a footer with social links - for available ic
 #  - {title: Subscribe, icon: rss, url: "/feed.xml"}
 
 comments:
-disqus_shortname: "https://nayonnii.github.io/about/"    # see https://disqus.com/
+disqus_shortname: "nayonnii-github-io"    # see https://disqus.com/
 #  isso_domain: ""         # see https://posativ.org/isso/
 
 plugins:
